<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg"
    android:orientation="vertical">

    <com.wen.college.views.TitleView
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_title="@string/setting" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20">

        <com.wen.college.views.UserInfoView
            android:id="@+id/setting_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:uv_img_visibility="gone"
            app:uv_input_enable="false"
            app:uv_input_visibility="gone"
            app:uv_label_text="@string/night" />

        <CheckBox
            android:id="@+id/setting_cb_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/selector_cb_mode_bt" />

    </RelativeLayout>

    <com.wen.college.views.UserInfoView
        android:id="@+id/setting_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        app:uv_input_enable="false"
        app:uv_input_visibility="visable"
        app:uv_label_text="@string/check_version" />

</LinearLayout>